welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:36: error: reassignment to val
   	d=false
         ^ZigZag:43: error: reassignment to val
   	d= true
         ^